update debugger layout